# newsletter_app

./: Cargo.toml  configuration.yaml
migrations/: 20220619151040_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
