[package]
name = "newsletter_app"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_app"

[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.10"
tokio = "1.19.2"

[dependencies]
actix-web = "=4.1.0"
actix-http = "=3.1.0"
serde = { version = "1", features = ["derive"]}
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]